pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: docker
      image: google/cloud-sdk:alpine
      command: ['cat']
      tty: true
      volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
  volumes:
    - name: docker-sock
      hostPath:
        path: /var/run/docker.sock
